--- a/apple-calculator.html
+++ b/apple-calculator.html
@@ -2,7 +2,7 @@
 <head>
 <title>Apple Calculator</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-<!--<script src=></script>//-->
+<script src= "apple-calculator.js"></script>
 <link href= "apple-calculator.css" rel="stylesheet">
 </head>
 <body>
