--- a/apple-calculator.html
+++ b/apple-calculator.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="calculator">
-<div class="display"></div>
+<div id="display"></div>
 <div class="rows">
 <button>MC</button>
 <button>M+</button>
@@ -16,22 +16,22 @@
 <button>MR</button>
 </div>
 <div class="rows">
-<button>C</button>
+<button id="clear">C</button>
 <button>&plusmn;</button>
-<button>&divide;</button>
-<button>&times;</button>
+<button class="operator">&divide;</button>
+<button class="operator">&times;</button>
 </div>
 <div class="rows">
 <button>7</button>
 <button>8</button>
 <button>9</button>
-<button>-</button>
+<button class="operator">-</button>
 </div>
 <div class="rows">
 <button>4</button>
 <button>5</button>
 <button>6</button>
-<button>+</button>
+<button class="operator">+</button>
 </div>
 <div class="rows">
 <button>1</button>
@@ -41,7 +41,7 @@
 <div class="rows">
 <button id="zero">0</button>
 <button id="period">.</button>
-<button id="equal">=</button>
+<button id="equal" onclick="calculate()">=</button>
 </div>
 </div>    
 </body>
