--- a/apple-calculator.html
+++ b/apple-calculator.html
@@ -16,31 +16,31 @@
 <button>MR</button>
 </div>
 <div class="rows">
-<button id="clear">C</button>
+<button id="clear" onclick='clearout("")'>C</button>
 <button>&plusmn;</button>
-<button class="operator">&divide;</button>
-<button class="operator">&times;</button>
+<button class="operator" onclick='placer("/")'>&divide;</button>
+<button class="operator" onclick='placer("*")'>&times;</button>
 </div>
 <div class="rows">
-<button>7</button>
-<button>8</button>
-<button>9</button>
-<button class="operator">-</button>
+<button onclick='placer("7")'>7</button>
+<button onclick='placer("8")'>8</button>
+<button onclick='placer("9")'>9</button>
+<button class="operator" onclick='placer("-")'>-</button>
 </div>
 <div class="rows">
-<button>4</button>
-<button>5</button>
-<button>6</button>
-<button class="operator">+</button>
+<button onclick='placer("4")'>4</button>
+<button onclick='placer("5")'>5</button>
+<button onclick='placer("6")'>6</button>
+<button class="operator" onclick='placer("+")'>+</button>
 </div>
 <div class="rows">
-<button>1</button>
-<button>2</button>
-<button>3</button>
+<button onclick='placer("1")'>1</button>
+<button onclick='placer("2")'>2</button>
+<button onclick='placer("3")'>3</button>
 </div>
 <div class="rows">
-<button id="zero">0</button>
-<button id="period">.</button>
+<button id="zero" onclick='placer("0")'>0</button>
+<button id="period" onclick='placer(".")'>.</button>
 <button id="equal" onclick="calculate()">=</button>
 </div>
 </div>    
