--- a/apple-calculator.html
+++ b/apple-calculator.html
@@ -9,6 +9,7 @@
 
 <div class="calculator">
 <div id="display"></div>
+<div id="output"></div>
 <div class="rows">
 <button>MC</button>
 <button>M+</button>
